<resources>
    <string name="app_name">SENAgram</string>
    <string name="login">Olvidaste tu contraseña? Ayuda de inicio de sesión</string>
    <string name="usuario">Número de teléfono, email o nombre de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="texto_foto">Albareto Siempre te llamo de madrugá\' porque quería decirte que Me encanta todo desde la primera ve\' Pero esta ve\' a mí me tocó perder</string>
    <string name="legusta_a">Les gusta a tucucha y otras personas</string>
    <string name="agrega_un_comentario">Agrega un comentario...</string>
    <string name="espa_ol_colombia">Español (Colombia)</string>
    <string name="albareto69">albareto69</string>
    <string name="ver_los_69_comentarios">Ver los 69 comentarios</string>
    <string name="segundafotoString">albareto69 mi lider uwu</string>
    <string name="salir">Salir</string>
</resources>