<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10px"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/espa_ol_colombia"
        android:textColor="@color/gray"
        android:textSize="40px" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="70pt"
        android:src="@drawable/instagram" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_gravity="center_horizontal"
        android:importantForAutofill="yes"
        android:hint="@string/usuario" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        app:endIconMode="password_toggle"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <EditText
            android:layout_width="396dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/contrase_a"
           android:importantForAutofill="yes"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>




    <Button
        android:id="@+id/button"
        android:layout_width="325dp"
        android:layout_height="65dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/login"
        android:text="@string/iniciar_sesi_n"
        android:layout_marginTop="100px"
        android:textSize="60px" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20pt"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/login"
        android:textSize="40px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>